--- a/googlee.html
+++ b/googlee.html
@@ -8,18 +8,23 @@
 
 	<body>
 	  <header id="topsection">
-	   <a class="a"  href="https://www.google.com/intl/fr/gmail/about/">gmail</a>
-	   <a class="a"  href="https://www.google.fr/imghp?hl=fr&tab=wi">images</a>
+	   <a class="b"  href="https://www.google.com/intl/fr/gmail/about/">Gmail</a>
+	   <a class="b"  href="https://www.google.fr/imghp?hl=fr&tab=wi">Images</a>
 	   <img class="head" src="square.png" alt="logo" width="20" height="20" />
+
 		<a class="connexion" href="https://accounts.google.com/signin/v2/identifier?hl=fr&passive=true&continue=https%3A%2F%2Fwww.google.fr%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><input type="button" class"connexion" value="connexion"/> </a>
+
 	  </header>
+
 
 	  <section id="menu">
 	   <img class="center" src="googlelogo_color_120x44dp.png" alt="logoo" />
 	   <div class="cent" >
 	    <form action="formbarre">
-			<input type="text" name="barre" id="barre" value= "" />
+
+			<input class="blabla" type="text"   value= "" />
         </form>
+
 	   </div>
 	   <div class="center">
 	    <p> <input type="button" class="center" onclick="rechercher()" value="recherche google"/></p>
@@ -33,15 +38,17 @@
 		</div>
 		<div id="gaucheDroite">
 			<div class="gauche">
-				<a class="a" href="http">Publicité</a>
-				<a class="a" href="http">Entreprise</a>
-				<a class="a" href="http">A propos</a>
+				<a class="c" href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a>
+				<a class="a" href="https://www.google.fr/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter#?modal_active=none">Entreprise</a>
+				<a class="a" href="https://about.google/?utm_source=google-FR&utm_medium=referral&utm_campaign=hp-footer&fg=1">A propos</a>
+				<a  class="a "href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google ?</a>
 			</div>
 			<div class="droite">
+				<a class="a" href="https://support.google.com/websearch/answer/9586983?p=fr_tos&hl=fr&fg=1&visit_id=637212647738557091-3162454916&rd=1">Publication judiciaire</a>
 				<a class="a" href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Info consommateurs</a>
 				<a class="a" href="https://policies.google.com/privacy?hl=fr&gl=fr">Condidentialité</a>
 				<a class="a"href="https://policies.google.com/terms?hl=fr&gl=fr">Conditions</a>
-				<a class="a" href="http">Paramètres</a>
+				<a class="a" href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Paramètres</a>
 			</div>
 		</div>
 	</footer>
