--- a/googlee.html
+++ b/googlee.html
@@ -2,7 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<link rel="stylesheet" href="style.css" />
+		  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<title>google</title>
 	</head>
 
@@ -10,11 +14,25 @@
 	  <header id="topsection">
 	   <a class="b"  href="https://www.google.com/intl/fr/gmail/about/">Gmail</a>
 	   <a class="b"  href="https://www.google.fr/imghp?hl=fr&tab=wi">Images</a>
-	   <img class="head" src="square.png" alt="logo" width="20" height="20" />
+		 <div class="dropdown">
+ 		      <a href="#" id="imageDropdown" data-toggle="dropdown">
+ 		       <img class="head" src="square.png" alt="logo" width="20" height="20" />
+ 		      </a>
+ 		      <ul class="dropdown-menu" role="menu" aria-labelledby="imageDropdown">
+ 		        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Menu item 1</a></li>
+ 		        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Menu item 2</a></li>
+ 		        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Menu item 3</a></li>
+ 		        <li role="presentation" class="divider"></li>
+ 		        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Menu item 4</a></li>
+ 		      </ul>
+ 		    </div>
+
 
 		<a class="connexion" href="https://accounts.google.com/signin/v2/identifier?hl=fr&passive=true&continue=https%3A%2F%2Fwww.google.fr%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><input type="button" class"connexion" value="connexion"/> </a>
 
 	  </header>
+
+
 
 
 	  <section id="menu">
@@ -52,4 +70,5 @@
 			</div>
 		</div>
 	</footer>
+
 	</body>
