--- a/googlee.html
+++ b/googlee.html
@@ -36,7 +36,7 @@
 
 
 	  <section id="menu">
-	   <img class="center" src="googlelogo_color_120x44dp.png" alt="logoo" />
+	   <img class="google" src="googlelogo_color_120x44dp.png" alt="logoo" />
 	   <div class="cent" >
 	    <form action="formbarre">
 
@@ -48,6 +48,8 @@
 	    <p> <input type="button" class="center" onclick="rechercher()" value="recherche google"/></p>
 	    <p> <input type="button" class="center" value="j'ai de la chance" /></p>
 		</div>
+	<p>	<img class="" src="https://www.gstatic.com/images/hpp/dothefive_90x90t.gif" alt="logo" width="40" height="40" /> <a href=" https://www.google.fr/search?q=coronavirus+conseils&fbx=dothefive&hl=fr"> 5 GESTES "BARRIÈRE" pour freiner le coronavirus</a></p>
+	<p>Google disponible en <a href"">English</a></p>
 	  </section>
 
 	<footer>
